permissions updates, styling updates, relationship updates

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -139,22 +139,6 @@ path {
   #mainContent.showDetails #detailsPanel {
     right: 0; }
 
-.connection {
-  --halfLeafSize: calc(var(--leafSize) / 2);
-  position: absolute;
-  left: 50%;
-  transform: translateX(-50%);
-  z-index: -1;
-  background-color: red; }
-  .connection_parentToChild {
-    height: calc(var(--leafSize) + 12px);
-    width: 10px;
-    top: var(--leafSpacing); }
-  .connection_childToParent {
-    height: calc(var(--leafSize) + 12px);
-    width: 10px;
-    bottom: var(--leafSpacing); }
-
 #myTree__list {
   max-width: 800px;
   margin: 0 auto; }
@@ -390,6 +374,8 @@ input[name*="profile_photo"] {
     display: none; }
 .partners .together {
   margin-right: -56px; }
+  .partners .together .leaf {
+    margin-left: -32px; }
 
 .message:empty {
   display: none; }
@@ -583,6 +569,27 @@ select {
     outline: 0px solid transparent;
     box-shadow: 0 0 0 2px var(--color_outline); }
 
+.select-wrapper {
+  padding: 0;
+  position: relative; }
+  .select-wrapper:after {
+    content: "\f0d7";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    position: absolute;
+    right: 16px;
+    top: 50%;
+    transform: translateY(-50%);
+    pointer-events: none; }
+  .select-wrapper select {
+    -webkit-appearance: none;
+    padding: 12px 16px;
+    border: 0px solid transparent;
+    border-radius: 8px;
+    padding-right: 40px; }
+    .select-wrapper select:hover {
+      cursor: pointer; }
+
 label {
   font-weight: bold;
   font-size: 15px; }
@@ -604,12 +611,14 @@ label {
     --inputGroupLayout: row;
     align-items: center; }
     .inputGroup.checkbox input[type=checkbox] {
-      -webkit-appearance: none;
       box-shadow: 0 0 0 1px var(--color_border);
       height: 24px;
       width: 24px;
       border-radius: 4px; }
       .inputGroup.checkbox input[type=checkbox]:checked {
+        content: "\f0d7";
+        font-family: "Font Awesome 5 Free";
+        font-weight: 900;
         background-color: var(--color_outline); }
       .inputGroup.checkbox input[type=checkbox]:focus, .inputGroup.checkbox input[type=checkbox]:hover {
         outline: none;
@@ -718,7 +727,7 @@ button,
     background-color: white;
     right: calc(100% + 8px);
     padding: 8px 12px;
-    border-radius: 8px;
+    border-radius: 24px;
     font-size: 14px;
     font-weight: 400;
     opacity: 0;
@@ -747,7 +756,7 @@ button,
 [tooltip-position="top middle"]:after {
   left: 50%;
   top: unset;
-  bottom: calc(100% + 16px);
+  bottom: calc(100% + 8px);
   right: unset;
   transform: translateX(-50%); }
 
@@ -756,6 +765,13 @@ button,
   top: unset;
   bottom: calc(100% + 16px);
   right: unset; }
+
+[tooltip-position="bottom middle"]:after {
+  left: 50%;
+  bottom: unset;
+  top: calc(100% + 8px);
+  right: unset;
+  transform: translateX(-50%); }
 
 [tooltip-reveal="fast"]:hover:after {
   transition-delay: unset; }
