--- a/scss/index.scss
+++ b/scss/index.scss
@@ -53,16 +53,16 @@ ol {
     list-style-type: none;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    &:first-child {
-        margin-top: 0;
-    }
-}
+// h1,
+// h2,
+// h3,
+// h4,
+// h5,
+// h6 {
+//     &:first-child {
+//         margin-top: 0;
+//     }
+// }
 
 h6 {
     font-weight: bold;
@@ -222,6 +222,7 @@ path {
     .myTree__item {
         border-radius: 8px;
         text-decoration: none;
+        min-height: 72px;
 
         &:hover,
         &:focus {
@@ -310,7 +311,7 @@ path {
             border-bottom: 1px solid var(--color_border);
             border-radius: 0;
             display: grid;
-            grid-template-columns: var(--leafSize) 1fr;
+            grid-template-columns: calc(var(--leafSize) - 12px) 1fr;
             gap: 8px;
 
             &:hover {
@@ -407,6 +408,7 @@ path {
     z-index: 99;
     background-color: white;
     box-shadow: 0 0 0 1px var(--color_border) inset;
+    scroll-behavior: smooth; 
 
     &:before {
         content: '';
@@ -452,6 +454,14 @@ path {
             transform: translate(-8px, -8px);
             z-index: -1;
         }
+
+        button {
+            opacity: 1;
+        }
+    }
+
+    button {
+        opacity: 0;
     }
 }
 
@@ -946,8 +956,8 @@ label {
         align-items: center;
 
         input[type=checkbox] {
-            // -webkit-appearance: none;
-            box-shadow: 0 0 0 1px var(--color_border);
+            -webkit-appearance: inherit;
+            box-shadow: 0 0 0 1px var(--color_dark_gray);
             height: 24px;
             width: 24px;
             border-radius: 4px;
@@ -1403,6 +1413,10 @@ button,
 
 .u-mar-b_point5 {
     margin-bottom: 4px;
+}
+
+.u-mar-t_0 {
+    margin-top: 0px;
 }
 
 .u-mar-t_1 {
