updates to how editing is performed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,6 +115,14 @@ path {
   width: 100%;
   height: 100%;
   overflow: visible; }
+  .leaf_connections.highlight {
+    z-index: 1; }
+    .leaf_connections.highlight path {
+      transition: all .1s ease-in-out;
+      stroke: var(--color_outline);
+      stroke-width: 4; }
+    .leaf_connections.highlight ~ .leaf_connections {
+      z-index: -5; }
 
 #mainContent {
   display: flex;
@@ -302,7 +310,6 @@ path {
     top: 0;
     bottom: 0;
     border-radius: 8px;
-    background-color: rgba(0, 0, 0, 0.08);
     background-color: var(--brand_lighter);
     transform: translate(-8px, -8px);
     z-index: -1; }
@@ -941,6 +948,9 @@ button,
 
 .u-pad_4 {
   padding: 32px; }
+
+.u-pad-b_0 {
+  padding-bottom: 0px; }
 
 .u-pad-b_10 {
   padding-bottom: 80px; }
