--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,7 +12,7 @@
   --brand_lighter: #E3F2F5;
   --navHeight: 88px;
   --navDecorationHeight: 24px;
-  --detailsWidth: 352px;
+  --detailsWidth: 332px;
   --bounceEasing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
   --iconButtonSize: 44px;
   --color_border: #D9DFE0;
@@ -598,6 +598,32 @@ select {
     outline: 0px solid transparent;
     box-shadow: 0 0 0 2px var(--color_outline); }
 
+.radioGroup {
+  display: flex;
+  position: relative;
+  border-radius: 8px;
+  width: 100%; }
+  .radioGroup input[type=radio] {
+    position: absolute;
+    visibility: hidden;
+    display: none; }
+    .radioGroup input[type=radio]:checked + label {
+      background-color: var(--brand_lighter); }
+    .radioGroup input[type=radio]:hover + label, .radioGroup input[type=radio]:focus + label {
+      transform: scale(1.02);
+      transition: all 0s ease-in-out;
+      cursor: pointer;
+      outline: none;
+      background-color: rgba(0, 0, 0, 0.05); }
+    .radioGroup input[type=radio]:hover:checked + label, .radioGroup input[type=radio]:focus:checked + label {
+      background-color: var(--brand_lighter); }
+  .radioGroup label {
+    padding: 12px 16px;
+    border-radius: 8px;
+    flex: 1;
+    text-align: center;
+    transition: all .1s ease-in-out; }
+
 .select-wrapper {
   padding: 0;
   position: relative; }
@@ -875,6 +901,12 @@ button,
       background-color: inherit; }
     .dropdown__label .iconButton {
       pointer-events: initial; }
+
+.u-fw_900 {
+  font-weight: 900; }
+
+.u-fw_600 {
+  font-weight: 600; }
 
 .u_disabled {
   pointer-events: none;
