--- a/public/css/style.css
+++ b/public/css/style.css
@@ -328,7 +328,7 @@ path {
   color: var(--color_gray);
   color: var(--brand);
   vertical-align: middle;
-  opacity: .3; }
+  opacity: .6; }
 
 .detailsPanel__fullName {
   opacity: .5;
@@ -602,7 +602,8 @@ select {
   display: flex;
   position: relative;
   border-radius: 8px;
-  width: 100%; }
+  width: 100%;
+  box-shadow: 0 0 0 1px var(--color_border); }
   .radioGroup input[type=radio] {
     position: absolute;
     visibility: hidden;
@@ -629,7 +630,7 @@ select {
   position: relative; }
   .select-wrapper:after {
     content: "\f0d7";
-    font-family: "Font Awesome 5 Free";
+    font-family: "Font Awesome 5 Pro";
     font-weight: 900;
     position: absolute;
     right: 16px;
@@ -673,7 +674,7 @@ label {
       border-radius: 4px; }
       .inputGroup.checkbox input[type=checkbox]:checked {
         content: "\f0d7";
-        font-family: "Font Awesome 5 Free";
+        font-family: "Font Awesome 5 Pro";
         font-weight: 900;
         background-color: var(--color_outline); }
       .inputGroup.checkbox input[type=checkbox]:focus, .inputGroup.checkbox input[type=checkbox]:hover {
@@ -747,7 +748,7 @@ button,
   width: var(--iconButtonSize);
   height: var(--iconButtonSize);
   line-height: var(--iconButtonSize);
-  font-size: 20px;
+  font-size: 22px;
   border-radius: 50%;
   align-items: center; }
   .iconButton:focus {
