--- a/public/css/style.css
+++ b/public/css/style.css
@@ -609,21 +609,22 @@ select {
     visibility: hidden;
     display: none; }
     .radioGroup input[type=radio]:checked + label {
-      background-color: var(--brand_lighter); }
+      color: white;
+      background-color: var(--brand); }
     .radioGroup input[type=radio]:hover + label, .radioGroup input[type=radio]:focus + label {
-      transform: scale(1.02);
-      transition: all 0s ease-in-out;
       cursor: pointer;
-      outline: none;
-      background-color: rgba(0, 0, 0, 0.05); }
-    .radioGroup input[type=radio]:hover:checked + label, .radioGroup input[type=radio]:focus:checked + label {
+      outline: 0px solid transparent;
+      color: var(--color_text);
       background-color: var(--brand_lighter); }
+    .radioGroup input[type=radio]:hover:checked + label, .radioGroup input[type=radio]:focus:checked + label {
+      color: white;
+      background-color: var(--brand); }
   .radioGroup label {
     padding: 12px 16px;
     border-radius: 8px;
     flex: 1;
     text-align: center;
-    transition: all .1s ease-in-out; }
+    margin-bottom: 0; }
 
 .select-wrapper {
   padding: 0;
@@ -661,7 +662,7 @@ label {
       margin-bottom: unset; }
   .inputGroup + .inputGroup {
     margin-top: 16px; }
-  .inputGroup label {
+  .inputGroup > label {
     margin-bottom: 8px; }
   .inputGroup.checkbox {
     --inputGroupLayout: row;
@@ -1021,6 +1022,9 @@ button,
 
 .u-mar-r_auto {
   margin-right: auto; }
+
+.u-mar-r_1 {
+  margin-right: 8px; }
 
 .u-mar-r_2 {
   margin-right: 16px; }
