--- a/scss/index.scss
+++ b/scss/index.scss
@@ -196,13 +196,34 @@ path {
     &.showDetails {
         // background-color: var(--color_background);
 
-        #familyTree {
+        #familyTree,
+        #familyTree__list {
             // margin: var(--detailsWidth);
             width: calc(100vw - var(--detailsWidth));
         }
 
+        // #familyTree__list {
+        //     width: calc(1024px + var(--detailsWidth));
+
+        //     table {
+        //         width: calc(100% - var(--detailsWidth));
+        //     }
+        // }
+
         #detailsPanel {
             right: 0;
+        }
+    }
+
+    &.view_list {
+        --leafSize: 32px;
+
+        #familyTree {
+            display: none;
+        }
+
+        #familyTree__list {
+            display: block;
         }
     }
 }
@@ -253,6 +274,123 @@ path {
 #branchContainer {
     display: flex;
     max-width: 100vw;
+}
+
+#familyTree__list {
+    $imgSize: 64px;
+    
+    width: 100vw;
+    display: none;
+    transition: width $detailsRevealTiming ease-in-out;
+
+    img {
+        width: $imgSize;
+        height: $imgSize;
+        max-width: $imgSize;
+        max-height: $imgSize;
+        object-fit: cover;
+        border-radius: $imgSize;
+    }
+
+    .profile__image {
+        width: $imgSize;
+    }
+
+    table {
+        max-width: 1024px;
+        width: 100%;
+        margin: 0 auto;
+        border-collapse: collapse;
+    }
+
+    tr {
+        border-radius: 16px;
+        z-index: 1;
+        position: relative;
+
+        &:hover {
+            td {
+                background-color: var(--brand_lighter);
+
+                &:after {
+                    background-color: rgba(black, 0);
+                }
+            }
+        }
+
+        &.highlight {
+            .leaf__image {
+                transform: scale3d(1.3, 1.3, 1.3);
+                transition: transform $detailsRevealTiming ease-in-out;
+            }
+        }
+
+        &.active {
+            box-shadow: 0 0 0 4px inset var(--color_outline);
+            z-index: 2;
+
+            td:after {
+                content: none;
+            }
+
+            .iconButton {
+                &:focus {
+                    box-shadow: none;
+                }
+                &:after {
+                    opacity: 0;
+                }
+            }
+
+            &:hover td {
+                background-color: unset;
+            }
+        }
+    }
+
+    th {
+        text-align: left;
+    }
+
+    td {
+        vertical-align: middle;
+        width: 20%;
+        position: relative;
+
+        &:first-child {
+            border-top-left-radius: 16px;
+            border-bottom-left-radius: 16px;
+
+            &:after {
+                width: calc(100% - 16px);
+                right: 0;
+                left: unset;
+            }
+        }
+
+        &:last-child {
+            border-top-right-radius: 16px;
+            border-bottom-right-radius: 16px;
+            width: var(--iconButtonSize);
+
+            &:after {
+                width: calc(100% - 16px);
+                left: 0;
+                right: unset;
+            }
+        }
+
+        &:after {
+            content: "";
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            background-color: var(--color_border);
+            bottom: 0;
+            left: 0;
+            right: 0;
+        }
+    }
 }
 
 #familyTree {
@@ -910,6 +1048,75 @@ select {
     }
 }
 
+.checkboxGroup {
+    $transition: all .2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    $checkboxSize: 32px;
+
+    display: flex;
+    position: relative;
+
+    input[type=checkbox] {
+        position: absolute;
+        visibility: hidden;
+        display: none;
+
+        &:checked + label:before {
+            content: "\f00c";
+            box-shadow: 0 0 0 2px inset var(--brand);
+            font-size: 18px;
+            transition: $transition;
+        }
+    }
+
+    label {
+        padding-left: $checkboxSize + 16px;
+        position: relative;
+        min-height: $checkboxSize;
+        padding-top: 8px;
+
+        &:before {
+            content: "";
+            font-weight: 400;
+            font-family: "Font Awesome 5 Pro";
+            width: $checkboxSize;
+            height: $checkboxSize;
+            border-radius: 8px;
+            box-shadow: 0 0 0 2px inset var(--color_border);
+            margin-right: 8px;
+            position: absolute;
+            left: 0;
+            top: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 0px;
+            transition: $transition;
+        }
+
+        &:hover {
+            cursor: pointer;
+        }
+    }
+
+    &.right {
+        justify-content: flex-end;
+
+        label {
+            padding-left: unset;
+            padding-right: $checkboxSize + 16px;
+            text-align: right;
+
+            &:before {
+                left: unset;
+                right: 0;
+                margin-right: unset;
+                margin-left: 8px;
+            }
+        }
+    }
+
+}
+
 .radioGroup {
     display: flex;
     position: relative;
@@ -1340,6 +1547,10 @@ button,
     font-size: 18px;
 }
 
+.u-font-size_17 {
+    font-size: 17px;
+}
+
 .u-font-size_15 {
     font-size: 15px;
 }
@@ -1388,6 +1599,18 @@ button,
     display: flex;
 }
 
+.u-d_table {
+    display: table;
+}
+
+.u-d_table-cell {
+    display: table-cell;
+}
+
+.u-d_table-row {
+    display: table-row;
+}
+
 .u-d_block {
     display: block;
 }
@@ -1405,7 +1628,7 @@ button,
 }
 
 .u-pad_1 {
-    padding: 16px;
+    padding: 8px;
 }
 
 .u-pad_2 {
@@ -1418,6 +1641,30 @@ button,
 
 .u-pad_4 {
     padding: 32px;
+}
+
+.u-pad-r_0 {
+    padding-right: 0px;
+}
+
+.u-pad-r_1 {
+    padding-right: 8px;
+}
+
+.u-pad-r_2 {
+    padding-right: 16px;
+}
+
+.u-pad-l_0 {
+    padding-left: 0px;
+}
+
+.u-pad-l_1 {
+    padding-left: 8px;
+}
+
+.u-pad-l_2 {
+    padding-left: 16px;
 }
 
 .u-pad-b_0 {
