--- a/public/css/style.css
+++ b/public/css/style.css
@@ -906,6 +906,7 @@ button,
   position: relative; }
   [tooltip]:after {
     content: attr(tooltip);
+    font-family: 'Lato', sans-serif;
     pointer-events: none;
     position: absolute;
     right: calc(100% + 8px);
@@ -1275,6 +1276,12 @@ button,
 .u-ai_center {
   align-items: center; }
 
+.u-ai_flex-end {
+  align-items: flex-end; }
+
+.u-ai_flex-start {
+  align-items: flex-start; }
+
 .u-o_75 {
   opacity: .75; }
 
@@ -1300,5 +1307,8 @@ button,
 .header_m {
   font-weight: 900;
   font-size: 24px; }
+
+.u-cursor_pointer {
+  cursor: pointer; }
 
 /*# sourceMappingURL=style.css.map */
