--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,12 +151,14 @@ path {
   max-width: 800px;
   margin: 0 auto; }
   #myTree__list .myTree__item {
-    border-radius: 8px;
     text-decoration: none;
-    min-height: 72px; }
+    min-height: 72px;
+    box-shadow: 0 1px 0 var(--color_border); }
     #myTree__list .myTree__item:hover, #myTree__list .myTree__item:focus {
+      border-radius: 8px;
       outline: none;
-      background-color: var(--brand_lighter); }
+      background-color: var(--brand_lighter);
+      box-shadow: 0 1px 0 transparent; }
     #myTree__list .myTree__item:active {
       background-color: rgba(0, 0, 0, 0.05); }
 
