--- a/scss/index.scss
+++ b/scss/index.scss
@@ -423,6 +423,7 @@ path {
     padding-bottom: 80px;
     // overflow: scroll;
     width: 100vw;
+    overflow: scroll;
 
     &:focus {
         outline: 0 solid transparent;
